--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./1.js"></script>
+    <script src="./Ejercicios 07-06-2022.js"></script>
 </body>
 </html>
