--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./Ejercicios 07-06-2022.js"></script>
+    <!-- <script src="./Ejercicios 07-06-2022.js"></script> -->
+    <script src="./Ejercicios 09-06-2022.js"></script>
 </body>
 </html>
